<resources>
    <string name="app_name">Slauversion1</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_navigation_drawer">St Lawrence University</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="welcome">Light your Candle</string>
    <string name="library">Library</string>
    <string name="directory">Directory</string>
    <string name="newsevent"><![CDATA[News & Event]]></string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="adminssion">Adminssion Portal</string>
    <string name="timetable">Time Table</string>
    <string name="others">Check with us</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phonenumber">Telephone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
