<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
        android:id="@+id/groupone">
        <item android:title="@string/welcome">
                <item android:title="@string/home"
                      android:icon="@drawable/ic_home"
                      android:id="@+id/home"
                      app:showAsAction="never"/>
                <item android:title="@string/about"
                      android:id="@+id/about"
                      android:icon="@drawable/ic_about"/>
                <item android:id="@+id/library"
                      android:title="@string/library"
                      android:icon="@drawable/library"/>
                <item android:id="@+id/adminssion"
                      android:icon="@drawable/ic_school"
                      android:title="@string/adminssion"/>
                <item android:id="@+id/message"
                      android:icon="@drawable/message"
                      android:title="@string/message"/>
                <item android:id="@+id/timetable"
                      android:icon="@drawable/ic_timetable"
                      android:title="@string/timetable"/>
                <item android:title="@string/map"
                      android:icon="@drawable/ic_map"
                      android:id="@+id/map"/>
                <!--<item android:id="@+id/directory"-->
                      <!--android:title="@string/directory"-->
                      <!--android:icon="@drawable/ic_action_amazon"/>-->
                <item android:icon="@drawable/message"
                      android:id="@+id/news"
                      android:title="@string/newsevent"/>





        </item>

    </group>
    <group>
        <item android:id="@+id/checkbox" android:title="@string/others">

                <item android:id="@+id/share"
                      android:icon="@drawable/ic_share"
                      android:title="@string/share"/>
                <item android:id="@+id/contact"
                      android:icon="@drawable/ic_contacts"
                      android:title="@string/contact"/>

        </item>

    </group>

</menu>